--- a/main.tex
+++ b/main.tex
@@ -83,8 +83,8 @@ colorlinks=true
 
 \section{概述}
 \subimport{}{overview}
-\section{技术架构选型}
-\subimport{}{arch}
+\section{底层虚拟化}
+\subimport{}{virtualization}
 \section{性能参考指标}
 
 \clearpage
