--- a/overview.tex
+++ b/overview.tex
@@ -106,7 +106,9 @@ Serverless技术在实现上，
 \begin{itemize}
     \item \textbf{弹性伸缩}：弹性伸缩是Serverless的基础，如何能够响应近乎“无限”的请求、根据需要自动伸缩，是Serverless平台最核心的要素之一。它又可以拆解为两个子问题：基础架构和伸缩算法。
     \item \textbf{冷启动优化}：由于Serverless一般按照时长计费，且需要支持极度的伸缩，因此，决定其伸缩效率的关键因素是启动时间。如何降低启动时间是一个需要解决的问题，该问题一般又可以等价于冷启动优化问题。
-    \item \textbf{高可用保障}：
+    \item \textbf{高可用保障}：保障平台在突发流量增长时能够从容应对、容忍临时软硬件故障
     \item \textbf{应用部署}：
+    \item \textbf{安全性}：FaaS需要运行用户代码，如何进行安全隔离、
+        保证函数调用之间互不影响，是非常重要的问题
     \item \textbf{整合现有系统}：
 \end{itemize}
