--- a/ref.bib
+++ b/ref.bib
@@ -121,3 +121,80 @@
   url = "https://www.infoq.cn/article/we9ubdr1p*tr6crsmyrv",
   year={2019},
 }
+
+@Inproceedings{Agache2020,
+ author = {Alexandru Agache and Marc Brooker and Andreea Florescu and Alexandra Iordache and Anthony Liguori and Rolf Neugebauer and Phil Piwonka and Diana-Maria Popa},
+ title = {Firecracker: Lightweight virtualization for serverless applications},
+ year = {2020},
+ url = {https://www.amazon.science/publications/firecracker-lightweight-virtualization-for-serverless-applications},
+ booktitle = {NSDI 2020},
+}
+
+@misc{ aws_2020_function_isolation,
+  title = "AWS re:Invent 2020: Deep dive into AWS Lambda security: Function isolation",
+  url = "https://www.youtube.com/watch?v=FTwsMYXWGB0",
+  year={2020},
+}
+
+
+@misc{ didi_serverless,
+  title = "从零到一，Serverless 平台在滴滴内部落地",
+  url = "https://cloud.tencent.com/developer/article/1664422",
+  year={2020},
+}
+
+@misc{ jd_serverless,
+  title = "李道兵：京东云的云原生理念及 Serverless 最佳实践",
+  url = "https://www.infoq.cn/article/5vbvEcE2UJuxxE4xer2k",
+  year={2019},
+}
+
+@misc{ jd_serverless_2,
+  title = "微服务低代码 Serverless 平台 (星链) 的应用实践",
+  url = "https://xie.infoq.cn/article/a6cc05adc879c31b0df66ebc1",
+  year={2022},
+}
+
+@inproceedings {rund,
+author = {Zijun Li and Jiagan Cheng and Quan Chen and Eryu Guan and Zizheng Bian and Yi Tao and Bin Zha and Qiang Wang and Weidong Han and Minyi Guo},
+title = {{RunD}: A Lightweight Secure Container Runtime for High-density Deployment and High-concurrency Startup in Serverless Computing},
+booktitle = {2022 USENIX Annual Technical Conference (USENIX ATC 22)},
+year = {2022},
+isbn = {978-1-939133-29-27},
+address = {Carlsbad, CA},
+pages = {53--68},
+url = {https://www.usenix.org/conference/atc22/presentation/li-zijun-rund},
+publisher = {USENIX Association},
+month = jul,
+}
+
+@misc{ k8s_large_cluster,
+  title = "Considerations for large clusters",
+  url = "https://kubernetes.io/docs/setup/best-practices/cluster-large/#:~:text=More%20specifically%2C%20Kubernetes%20is%20designed,No%20more%20than%205000%20nodes",
+  year={2022},
+}
+
+@misc{ google_cloud_run_concurrency,
+  title = "Maximum concurrent requests per instance (services)",
+  url = "https://cloud.google.com/run/docs/about-concurrency",
+  year={2022},
+}
+
+@misc{ lambda_concurrency,
+  title = "How do I request a concurrency limit increase for my Lambda function?",
+  url = "https://aws.amazon.com/premiumsupport/knowledge-center/lambda-concurrency-limit-increase/?nc1=h_ls",
+  year={2021},
+}
+
+
+@misc{ aws_global_infra,
+  title = "AWS Global Infrastructure",
+  url = "https://aws.amazon.com/about-aws/global-infrastructure/",
+  year={2021},
+}
+
+@misc{ aws_lambda_2022,
+  title = "AWS re:Invent 2022 - A closer look at AWS Lambda (SVS404-R)",
+  url = "https://www.youtube.com/watch?v=0_jfH6qijVY",
+  year={2022},
+}
