--- a/main.tex
+++ b/main.tex
@@ -83,8 +83,18 @@ colorlinks=true
 
 \section{概述}
 \subimport{}{overview}
-\section{底层虚拟化}
+\section{Serverless运行基础}
+\subsection{底层虚拟化}
 \subimport{}{virtualization}
+\subsection{隔离及安全}
+\subimport{}{isolation}
+\section{平台整体架构}
+\subimport{}{arch}
+\section{冷启动问题}
+\subimport{}{coldstart}
+\section{高可用}
+\subimport{}{ha}
+\section{部署及开发工具支持}
 \section{性能参考指标}
 
 \clearpage
