--- a/overview.tex
+++ b/overview.tex
@@ -112,3 +112,18 @@ Serverless技术在实现上，
         保证函数调用之间互不影响，是非常重要的问题
     \item \textbf{整合现有系统}：
 \end{itemize}
+
+\subsection{AWS Lambda的演进}
+各个Serverless平台都是在不断完善和改进的，
+AWS Lambda在Serverless领域耕耘最久、积累最丰富，
+因此Lambda的功能、架构演进十分具有参考价值。
+AWS Lambda从发布之初到现在也经历过许多变化，
+包含新功能的支持、架构的调整等，
+如\cref{lambda_involution}所示。
+
+\begin{figure}[ht!]
+    \centering
+    \includegraphics[width=\linewidth]{images/lambda_involution.png}
+    \caption{AWS Lambda演进历史\cite{aws_lambda_2022}}
+    \label{lambda_involution}
+\end{figure}
