--- a/ref.bib
+++ b/ref.bib
@@ -95,6 +95,11 @@
   year={2019},
 }
 
+@misc{ tecent_vpc_cold_start,
+  title = "腾讯云函数访问VPC网络架构优化",
+  url = "https://cloud.tencent.com/developer/article/1461707",
+  year={2019},
+}
 
 @misc{ baidu_serverless_arch,
   title = "百度 Serverless 架构揭秘与应用实践",
@@ -197,4 +202,25 @@ month = jul,
   title = "AWS re:Invent 2022 - A closer look at AWS Lambda (SVS404-R)",
   url = "https://www.youtube.com/watch?v=0_jfH6qijVY",
   year={2022},
+}
+
+@inproceedings{carreira2021warm,
+  title={From warm to hot starts: Leveraging runtimes for the serverless era},
+  author={Carreira, Joao and Kohli, Sumer and Bruno, Rodrigo and Fonseca, Pedro},
+  booktitle={Proceedings of the Workshop on Hot Topics in Operating Systems},
+  pages={58--64},
+  year={2021}
+}
+
+@misc{ aure_functions_cold_start,
+  title = "Azure Functions: Cold Starts in Numbers",
+  url = "https://mikhail.io/2018/04/azure-functions-cold-starts-in-numbers/",
+  year={2018},
+}
+
+@inproceedings{mohan2019agile,
+  title={Agile cold starts for scalable serverless},
+  author={Mohan, Anup and Sane, Harshad and Doshi, Kshitij and Edupuganti, Saikrishna and Nayak, Naren and Sukhomlinov, Vadim},
+  booktitle={11th USENIX Workshop on Hot Topics in Cloud Computing (HotCloud 19)},
+  year={2019}
 }
