--- a/virtualization.tex
+++ b/virtualization.tex
@@ -30,16 +30,16 @@
         \bottomrule
     \end{tabularx}
 \begin{tablenotes}
-    \item[1] 阿里函数计算第二代架构已经改为用神龙裸金属+安全容器实现\cite{aliyun_faas_arch_2}
-    \item[2] 腾讯云使用自研的轻量级虚拟化技术，不确定是否与AWS microVM相同
-    \item[3] 工商银行函数计算1.0使用Knative，2.0改用百度函数计算产品
-    \end{tablenotes}
+    \item[1] {\footnotesize 阿里函数计算第二代架构已经改为用神龙裸金属+安全容器实现\cite{aliyun_faas_arch_2}}
+    \item[2] {\footnotesize 腾讯云使用自研的轻量级虚拟化技术，不确定是否与AWS microVM相同}
+    \item[3] {\footnotesize 工商银行函数计算1.0使用Knative，2.0改用百度函数计算产品}
+\end{tablenotes}
 \end{threeparttable}
 \caption{一些Serverless平台的基础设施}
 \label{table:serverless-infras}
 \end{table}
 
-\subsection{基于Kubernetes}
+\subsubsection{基于Kubernetes}
 Kubernetes已经是事实上的云原生标准，
 因此使用Kubernetes作为底层运行时是一个最常规的选择，
 且其本身自带了容器编排、服务治理等功能，生态较好。
@@ -48,7 +48,7 @@ Knative是谷歌开源的基于Kubernetes的Serverless运行环境。
 或者在此基础之上的Knative，
 例如美团、字节以及谷歌等。
 
-\subsection{基于裸金属+虚拟化技术}
+\subsubsection{基于裸金属+虚拟化技术}
 使用裸金属服务器结合虚拟化技术（如安全容器或者MicroVM），
 例如AWS Lambda和阿里函数计算等。
 相对于Kubernetes而言，
@@ -60,7 +60,7 @@ Knative是谷歌开源的基于Kubernetes的Serverless运行环境。
 
 \begin{figure}[ht!]
     \centering
-    \includegraphics[width=\linewidth]{images/lambda_worker.png}
+    \includegraphics[width=0.7\linewidth]{images/lambda_worker.png}
     \caption{AWS Lambda的工作负载使用Firecracker虚拟化\cite{aws_lambda_2022}}
     \label{lambda_worker}
 \end{figure}
@@ -70,7 +70,7 @@ Knative是谷歌开源的基于Kubernetes的Serverless运行环境。
 除此之外，还有基于普通Docker实现的，
 例如基于Docker的FaaS平台（如Fn Project）。
 
-\subsection{混合使用Kubernetes及裸金属服务器}
+\subsubsection{混合使用Kubernetes及裸金属服务器}
 除了上述的做法外，
 还有一些框架也有支持多种运行时的，
 例如Apache OpenWhisk、百度开源的EasyFaaS等，
