--- a/main.tex
+++ b/main.tex
@@ -65,7 +65,7 @@ colorlinks=true
 }
 \usemintedstyle{colorful}
 
-\title{业界Serverless架构调研}
+\title{业界Serverless实现的关键技术}
 \author{李海峰}
 
 \begin{document}
@@ -94,8 +94,8 @@ colorlinks=true
 \subimport{}{coldstart}
 \section{高可用}
 \subimport{}{ha}
-\section{部署及开发工具支持}
-\section{性能参考指标}
+\section{部分性能指标参考}
+\subimport{}{performance}
 
 \clearpage
 \printbibliography 
