--- a/ref.bib
+++ b/ref.bib
@@ -224,3 +224,15 @@ month = jul,
   booktitle={11th USENIX Workshop on Hot Topics in Cloud Computing (HotCloud 19)},
   year={2019}
 }
+
+@misc{ tecent_cf_doc,
+  title = "云函数 - 预置并发",
+  url = "https://cloud.tencent.com/document/product/876/64971#.E5.B9.B6.E5.8F.91.E6.89.A9.E5.AE.B9",
+  year={2018},
+}
+
+@misc{ azure_container_apps_ga,
+  title = "Generally available: Azure Container Apps",
+  url = "https://azure.microsoft.com/en-us/updates/generally-available-azure-container-apps/",
+  year={2022},
+}
