--- a/virtualization.tex
+++ b/virtualization.tex
@@ -9,7 +9,8 @@
         \toprule
         \textbf{基础架构} & \textbf{产品} \\
         \midrule
-        Kubernetes & 美团Nest\cite{meituan_serverless_nest, meituan_serverless_2}、
+        Kubernetes & Azure Container Apps\cite{azure_container_apps_ga}、
+        美团Nest\cite{meituan_serverless_nest, meituan_serverless_2}、
         字节ByteFaaS\cite{bytedance_faas}、Nimbella\cite{nimbella_k8s}、
         京东Serverless\cite{jd_serverless, jd_serverless_2} \\
         \hline
